@@ -307,11 +307,13 @@ stored in the `w3m-favicon-image' buffer-local variable."
 	(w3m-favicon-set-image (w3m-favicon-cache-favicon url)))
     (lexical-let ((url url)
 		  (type type)
-		  (target target))
+		  (target target)
+		  (silent w3m-message-silent))
       (w3m-process-with-null-handler
 	(w3m-process-do-with-temp-buffer
 	    (ok (w3m-retrieve url 'raw nil nil nil handler))
-	  (let (idata image)
+	  (let ((w3m-message-silent silent)
+		idata image)
 	    (if (and ok
 		     ;; Some broken servers provides empty contents.
 		     (>= (buffer-size) 4))
